# mcp-skill-code_exec

./: .gitignore  Readme.md  chainlit.md  chainlit_app.py  chainlit_app_v2.py  init.md  pyproject.toml  requirements.txt
.ai/planning/: memory_injection_plan.md  multi_turn_implementation_plan.md  refactoring_workflow_agent.md  working_vs_response_steps.md
.chainlit/: config.toml
.trae/documents/: Add Leave Management and Performance Review Scopes.md  Add Recruitment-scopes and Procurement-scopes to skills_v2.md  Explain Data Flow.md  (+13 more)
agent_workspace/: .env.example  README.md  main.py  main_agent.py  main_agent_v2.py  requirements.txt
baml_client/: __init__.py  async_client.py  inlinedbaml.py  parser.py  stream_types.py  sync_client.py  type_builder.py  type_map.py  types.py
baml_src/: chat.baml  clients.baml  executor.baml  generators.baml  planner.baml  readme.md  types.baml  workflow_agent.baml
mcp_skill_code_exec.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: conftest.py  test_agent_flow.py  test_agent_flow_v2.py  test_candidate_tracker.py  test_chainlit_app_v2_import.py  test_code_executor.py  test_code_executor_v2.py  test_hr_scopes_examples_execute.py  test_hr_scopes_new_tools_and_examples.py  test_hr_scopes_scenario_requests.py  test_main_agent_v2.py  test_mcp_docs.py  test_mcp_docs_registry_v2.py  test_mcp_docs_v2.py  test_mcp_tools.py  test_mock_data_fixtures.py  test_multi_turn_workflows.py  test_plan_v2_alignment.py  test_skill_registry.py  test_skill_registry_v2.py  test_tool_docs_selection_by_scope.py
(+172 files in other folders)
